# VulkanWithCamera

./: README.md  gradlew.bat
app/: CMakeLists.txt  build.gradle
app/common/data/: cube_data.h
app/common/data/glm/: common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
app/common/data/glm/detail/: _noise.hpp  func_common.inl  func_exponential.inl  func_exponential_simd.inl  func_geometric.inl  func_geometric_simd.inl  func_integer.inl  func_integer_simd.inl  func_matrix.inl  func_packing.inl  setup.hpp  type_mat2x2.hpp  type_mat2x2.inl  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x2.hpp  type_mat3x3.hpp  type_mat3x3.inl  type_mat3x4.hpp  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.hpp  type_mat4x4.inl
app/common/data/glm/ext/: vec1.hpp  vector_relational.hpp  vector_relational.inl
app/common/data/glm/gtc/: bitfield.hpp  color_space.hpp  constants.hpp  epsilon.inl  integer.hpp  matrix_access.hpp  matrix_integer.hpp  matrix_inverse.hpp  matrix_transform.hpp  noise.hpp  packing.inl  quaternion.hpp  quaternion.inl  random.hpp  random.inl  reciprocal.hpp  reciprocal.inl  round.hpp  round.inl  type_aligned.hpp  type_precision.hpp  type_ptr.hpp  ulp.hpp  ulp.inl  vec1.hpp
app/common/data/glm/gtx/: associated_min_max.hpp  bit.hpp  closest_point.hpp  color_encoding.hpp  color_space.hpp  color_space_YCoCg.hpp  common.hpp  common.inl  compatibility.hpp  component_wise.hpp  dual_quaternion.hpp  dual_quaternion.inl  euler_angles.hpp  extend.hpp  extended_min_max.hpp  exterior_product.hpp  fast_exponential.hpp  fast_square_root.hpp  fast_trigonometry.hpp  functions.hpp  functions.inl  (+50 more)
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: VulkanJni.cpp  VulkanMain.cpp  VulkanMain.h  VulkanUtil.cpp  VulkanUtil.h  util.h
app/src/main/shaders/: triangle.frag  triangle.vert
(+145 files in other folders)
